<resources>
    <string name="app_name">BeerShare</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="loginTitle">Login</string>
    <string name="beerCellarTitle">Mein Bierkeller</string>
    <string name="beerCellarListTitle">Meine Bierkeller</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="acceptBeerOrder">Okay</string>
    <string name="declineBeerOrder">Ablehnen</string>
    <string name="beerCellarName">Name</string>
    <string name="addBeer">Biere hinzufügen</string>
    <string name="beerName">Biersorten</string>
    <string name="beerAmount">Menge</string>
    <string name="noBeerAvailable">Noch kein Bier eingelagert</string>
    <string name="address">Adresse</string>
    <string name="addBeerCellar">Bierkeller hinzufügen</string>
    <string name="orderBeer">Bestellen</string>
    <string name="iSearchBeer">Ich suche Bier</string>
    <string name="myOrders">Meine Bestellungen</string>
    <string name="myCellars">Meine Bierkeller</string>
    <string name="backendHostname">Backend hostname</string>
    <string name="authenticationFailed">Authentication failed</string>
    <string name="backendNotReachable">Backend not reachable</string>
    <string name="notEnoughBeer">Nicht genügend Bier vorhanden</string>
    <string name="invalidBeerAmount">Ungültige Menge eingegeben</string>
    <string name="incomingOrder">Eingehende Bestellung</string>
    <string name="outgoingOrder">Ausgehende Bestellung</string>
    <string name="newOrder">Neue Bestellung</string>
    <string name="addBeerCellarTitle">Bierkeller hinzufügen</string>
    <string name="newBeerCellarName">Neuer Bierkeller</string>
    <string name="maximumBeerAmount">Maximum: %1$d</string>
    <string name="beerCellarFrom">Bierkeller von %1$s</string>
</resources>