<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BeerOrderActivity"
    android:padding="24dp"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/beerName"
        android:layout_marginBottom="12dp">

        <EditText
            android:id="@+id/etOrderName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:autofillHints="" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etOrderAmountLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/beerAmount"
        android:layout_marginBottom="6dp">

        <EditText
            android:id="@+id/etOrderAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="number">
            <requestFocus/>
        </EditText>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:text="Maximum: 24"

        android:id="@+id/tvMaxOrderAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:gravity="start"
        android:layout_marginBottom="12dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAcceptBeerOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginRight="12dp"
            android:layout_marginEnd="12dp"
            android:text="@string/acceptBeerOrder"
            android:drawableLeft="@drawable/ic_baseline_done_24"
            android:drawableTint="@color/white"/>

        <Button
            android:id="@+id/btnDeclineBeerOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/declineBeerOrder"
            android:drawableLeft="@drawable/ic_outline_cancel_24"
            android:drawableTint="@color/white"/>

    </LinearLayout>

</LinearLayout>